Added to the step 8

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the analysis perfomed, movie duration made over the years seem to have declined."
+    "From the analysis perfomed, movie duration made over the years seem to have declined over the years especially towards 2020"
    ]
   }
  ],
